--- a/NewCraft/NewCraft.vcxproj.filters
+++ b/NewCraft/NewCraft.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="NewCraft.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="world.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
