--- a/NewCraft/NewCraft.vcxproj
+++ b/NewCraft/NewCraft.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClCompile Include="NewCraft.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="world.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
